# litert-samples

./: .bazelrc  .gitignore  .litert_configure.bazelrc  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  WORKSPACE  index.html
.github/workflows/: test_builds.yml
compiled_model_api/audio_classification/: README.md
compiled_model_api/audio_classification/conversion/: README.md  _stub.py  build_w2v2.py  build_w2v2_split.py
compiled_model_api/audio_codec/: README.md
compiled_model_api/audio_codec/conversion/: README.md  _stub.py  build_hybrid_graphs.py  build_mimi.py  mimi_rvq_validate_export.py
compiled_model_api/audio_source_separation/: README.md
compiled_model_api/audio_source_separation/conversion/: README.md  _stub_tiger.py  build_tiger.py  gpu_tiger.py
compiled_model_api/background_removal/: README.md
compiled_model_api/background_removal/ormbg_kotlin_gpu/: README.md
compiled_model_api/clothing_segmentation/cloth_segmentation_kotlin_gpu/: README.md
compiled_model_api/colab/: LiteRT_AOT_Compilation_Tutorial.ipynb  On_Device_RAG.ipynb
compiled_model_api/crowd_counting/dmcount_kotlin_gpu/: README.md
compiled_model_api/depth_estimation/: README.md
compiled_model_api/depth_estimation/conversion/: README.md  convert_da3_litert.py  convert_midas_litert.py
compiled_model_api/dichotomous_segmentation/dis_kotlin_gpu/: README.md
compiled_model_api/digit_classifier/: README.md
compiled_model_api/document_dewarping/dewarpnet_kotlin_gpu/: README.md
compiled_model_api/drivable_area_segmentation/twinlitenet_kotlin_gpu/: README.md
compiled_model_api/face_alignment_3d/: README.md
compiled_model_api/face_alignment_3d/conversion/: README.md  build_tddfa.py  ref_tddfa.py
compiled_model_api/face_anti_spoofing/silent_face_kotlin_gpu/: README.md
compiled_model_api/face_detection/: README.md
compiled_model_api/face_detection/conversion/: README.md  build_yunet.py  device_gate_yunet.py
compiled_model_api/face_landmark/: README.md
compiled_model_api/face_landmark/conversion/: README.md  build_rtm_face.py  device_gate_face.py
compiled_model_api/face_parsing/bisenet_kotlin_gpu/: README.md
compiled_model_api/face_restoration/: README.md
compiled_model_api/face_restoration/conversion/: README.md  build_gfpgan.py
compiled_model_api/facial_emotion_recognition/hsemotion_kotlin_gpu/: README.md
compiled_model_api/feature_matching/kotlin_cpu_gpu/: README.md
compiled_model_api/feature_visualization/dinov2_kotlin_gpu/: README.md
compiled_model_api/gaze_estimation/: README.md
compiled_model_api/gaze_estimation/conversion/: README.md  build_gaze.py  device_gate_gaze.py
compiled_model_api/gemma_on_device/: README.md
compiled_model_api/gemma_on_device/app/: build.gradle.kts
compiled_model_api/gemma_on_device/gradle/: libs.versions.toml
compiled_model_api/google/sample_app_tpu/: .gitignore  README.md  build.gradle.kts  gradle.properties  gradle_out.txt  settings.gradle.kts
compiled_model_api/head_pose_estimation/sixdrepnet_kotlin_gpu/: README.md
compiled_model_api/image_classification/: README.md
compiled_model_api/image_classification/python/imagenet-e2e-sample/: README.md  main.py  pyproject.toml
compiled_model_api/image_matching/: README.md
compiled_model_api/image_quality_assessment/: README.md
compiled_model_api/image_restoration/: README.md
compiled_model_api/image_segmentation/c++_segmentation/use_prebuilt_litert/: CMakeLists.txt  README.md  build_prebuilt.sh  deploy_and_run_on_android.sh  image_processor.cc  image_processor.h  image_utils.cc  image_utils.h  main_cpu.cc  main_gpu.cc  main_npu.cc  timing_utils.cc  timing_utils.h
compiled_model_api/image_tagging/: README.md
compiled_model_api/inpainting/: README.md
compiled_model_api/interactive_segmentation/: README.md
compiled_model_api/line_detection/: README.md
compiled_model_api/low_light_enhancement/: README.md
compiled_model_api/metric_depth/: README.md
compiled_model_api/music_transcription/: README.md
compiled_model_api/object_detection/: README.md
compiled_model_api/ocr/: README.md
compiled_model_api/phototalk_AI/: README.md
compiled_model_api/phototalk_sample_app/: README.md
compiled_model_api/pitch_detection/: README.md
compiled_model_api/portrait_matting/: README.md
compiled_model_api/pose_estimation/: README.md
compiled_model_api/reranking/: README.md
compiled_model_api/saliency/: README.md
compiled_model_api/semantic_segmentation/: README.md
compiled_model_api/semantic_similarity/: README.md  deploy_and_run_android.sh  deps.sh
compiled_model_api/sound_event_detection/: README.md
compiled_model_api/speaker_diarization/: README.md
compiled_model_api/speech_enhancement/: README.md
compiled_model_api/speech_recognition/: README.md
compiled_model_api/speech_recognition/AndroidApp/app/src/main/cpp/: CMakeLists.txt  tokenizer_jni.cc
compiled_model_api/speech_recognition/AndroidApp/app/src/main/cpp/include/: tokenizers_c.h
compiled_model_api/super_resolution/: README.md
compiled_model_api/text_prompted_segmentation/: README.md
compiled_model_api/text_to_speech/: README.md
compiled_model_api/text_to_speech_dia2/: README.md
compiled_model_api/text_to_speech_lm/: README.md
compiled_model_api/text_to_speech_vibevoice/: README.md
compiled_model_api/zero_shot_image_classification/: README.md
end_to_end/imagenet/: README.md  eval.py  eval_evaluate.py  imagenet_preprocessing.py  main.py  pyproject.toml
examples/ditgit_classifier/: settings.gradle.kts
examples/reinforcement_learning/: settings.gradle.kts
interpreter_api/text_to_speech/: .gitignore  README.md
litert/c/: windows_exported_symbols.def
samples/litert/: README.md
samples/litert_interpreter/: README.md
samples/litertlm/: README.md
skills/: README.md
tensor_api_playground/: _game_of_life_demo_bin.js  api_doc.md  demo.css  gemma3_tokenizer_internal.js  index.html  playground_ts.html  tensor_wasm.js
tensor_api_playground/demo/: index.html  playground.html
utilities/: README.md
v2/colab/: LiteRT_AOT_Compilation_Tutorial.ipynb
(+2181 files in other folders)
