[project]
name = "imagenet-e2e-sample"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10, <3.14"
dependencies = [
    "ai-edge-litert>=2.1.0",
    "ai-edge-torch>=0.2.0",
    "torch>=2.8.0",
    "torchvision==0.24.0+cpu",
]

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"

